fix: sync station renames in destination list fix: fix station renaming not possible fix: sync stations on each new peer connection feat: improved publish scripts

--- a/UndeadBits.ValheimMods.PortalStation/Package/manifest.json
+++ b/UndeadBits.ValheimMods.PortalStation/Package/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "PortalStation",
+  "name": "PortalStations",
   "description": "",
   "version_number": "0.0.1",
   "website_url": "",
