chore: remove Package/Changelog.md and add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /dist
+/UndeadBits.ValheimMods.PortalStation/Package/Changelog.md
 /UndeadBits.ValheimMods.PortalStationUnity
 
 ## Ignore Visual Studio temporary files, build results, and
