--- a/UndeadBits.ValheimMods.PortalStation/packages.config
+++ b/UndeadBits.ValheimMods.PortalStation/packages.config
@@ -6,4 +6,5 @@
   <package id="MonoMod" version="21.9.19.1" targetFramework="net462" />
   <package id="MonoMod.RuntimeDetour" version="22.1.29.1" targetFramework="net462" />
   <package id="MonoMod.Utils" version="22.1.29.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
 </packages>
